k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-basic-app-service
spec:
  selector:
    app: nextjs-basic-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
