k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextjs-basic-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ${EXTERNAL_IP}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextjs-basic-app-service
            port:
              number: 80
